@@ -11,6 +11,7 @@ version 0.96:
 	- add accessor pidFilename
 	- besides CODEs refs, most parameters now also support a method name
 	- support daemon which does its task directly (run_task)
+	- split setting group and user for readibility.
 
 version 0.95: Sun  4 Mar 12:00:31 CET 2018
 
